--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,8 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        maven { url "https://raw.github.com/bmob/bmob-android-sdk/master" }
+        maven { url "https://dl.bintray.com/thelasterstar/maven/" }
     }
 }
 
